database models created

--- a/sitio-gimnasio/src/db/config.json
+++ b/sitio-gimnasio/src/db/config.json
@@ -2,21 +2,21 @@
   "development": {
     "username": "root",
     "password": null,
-    "database": "database_development",
+    "database": "fy25",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "test": {
     "username": "root",
     "password": null,
-    "database": "database_test",
+    "database": "fy25_test",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "production": {
-    "username": "root",
+    "username": "root_prod",
     "password": null,
-    "database": "database_production",
+    "database": "fy25",
     "host": "127.0.0.1",
     "dialect": "mysql"
   }
