--- a/sitio-gimnasio/package.json
+++ b/sitio-gimnasio/package.json
@@ -13,5 +13,10 @@
     "react": "^18",
     "react-dom": "^18",
     "sequelize": "^6.37.2"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3"
   }
 }
