--- a/sitio-gimnasio/package.json
+++ b/sitio-gimnasio/package.json
@@ -13,6 +13,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.1.0",
+    "react-toastify": "^10.0.5",
     "sequelize": "^6.37.2"
   },
   "devDependencies": {
