--- a/sitio-gimnasio/src/db/config/config.json
+++ b/sitio-gimnasio/src/db/config/config.json
@@ -1,21 +1,21 @@
 {
   "development": {
     "username": "root",
-    "password": null,
+    "password": "root",
     "database": "fy25",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "test": {
     "username": "root",
-    "password": null,
+    "password": "root",
     "database": "fy25_test",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "production": {
     "username": "root_prod",
-    "password": null,
+    "password": "root",
     "database": "fy25",
     "host": "127.0.0.1",
     "dialect": "mysql"
