--- a/sitio-gimnasio/package.json
+++ b/sitio-gimnasio/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "mysql2": "^3.9.7",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.1.0",
     "react-toastify": "^10.0.5",
-    "sequelize": "^6.37.2"
+    "sequelize": "^6.37.2",
+    "swiper": "^11.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.19",
