--- a/sitio-gimnasio/src/db/config/config.json
+++ b/sitio-gimnasio/src/db/config/config.json
@@ -11,13 +11,13 @@
     "password": "root",
     "database": "fy25_test",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect": "postgres"
   },
   "production": {
     "username": "root_prod",
     "password": "root",
     "database": "fy25",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect": "postgres"
   }
 }
