--- a/sitio-gimnasio/package.json
+++ b/sitio-gimnasio/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "formik": "^2.4.6",
     "mysql2": "^3.9.7",
     "next": "14.1.4",
     "next-auth": "^4.24.7",
+    "nodemailer": "^6.9.13",
     "pg": "^8.11.5",
     "pg-hstore": "^2.3.4",
     "react": "^18",
