Adding user authentication

--- a/sitio-gimnasio/.env.example
+++ b/sitio-gimnasio/.env.example
@@ -2,3 +2,4 @@ NEXT_PUBLIC_API_URL=http://localhost:3000/api/
 NEXT_PUBLIC_EMAIL=jhpiano9731@gmail.com
 NEXT_PUBLIC_PASSWORD=bkkmgrlzrifczjpk
 NEXT_PUBLIC_URL=http://localhost:3000/
+NEXTAUTH_SECRET=LTPv/UAhKU3pxbNPpeoESBX94rQPvIfcI0VdT1TE78g=
