--- a/sitio-gimnasio/package.json
+++ b/sitio-gimnasio/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@yudiel/react-qr-scanner": "^2.0.0-beta.3",
     "bcryptjs": "^2.4.3",
     "formik": "^2.4.6",
     "mysql2": "^3.9.7",
