--- a/sitio-gimnasio/package.json
+++ b/sitio-gimnasio/package.json
@@ -6,9 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "ava"
   },
   "dependencies": {
+    "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
     "formik": "^2.4.6",
     "mysql2": "^3.9.7",
@@ -23,10 +25,12 @@
     "react-icons": "^5.1.0",
     "react-toastify": "^10.0.5",
     "sequelize": "^6.37.2",
-    "swiper": "^11.1.1"
+    "swiper": "^11.1.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.19",
+    "ava": "^6.1.3",
     "postcss": "^8.4.38",
     "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "^3.4.3"
