--- a/sitio-gimnasio/package.json
+++ b/sitio-gimnasio/package.json
@@ -10,10 +10,11 @@
     "test": "ava"
   },
   "dependencies": {
-    "axios": "^1.6.8",
     "@yudiel/react-qr-scanner": "^2.0.0-beta.3",
+    "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
     "formik": "^2.4.6",
+    "generate-password": "^1.7.1",
     "mysql2": "^3.9.7",
     "next": "14.1.4",
     "next-auth": "^4.24.7",
@@ -24,6 +25,7 @@
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
     "react-icons": "^5.1.0",
+    "react-select": "^5.8.0",
     "react-toastify": "^10.0.5",
     "sequelize": "^6.37.2",
     "swiper": "^11.1.1",
