--- a/sitio-gimnasio/.env.example
+++ b/sitio-gimnasio/.env.example
@@ -3,3 +3,6 @@ NEXT_PUBLIC_EMAIL=jhpiano9731@gmail.com
 NEXT_PUBLIC_PASSWORD=bkkmgrlzrifczjpk
 NEXT_PUBLIC_URL=http://localhost:3000/
 NEXTAUTH_SECRET=LTPv/UAhKU3pxbNPpeoESBX94rQPvIfcI0VdT1TE78g=
+NEXT_PUBLIC_REDIS_HOST=localhost
+NEXT_PUBLIC_REDIS_PORT=6379
+NEXT_PUBLIC_REDIS_PASSWORD=
