refactoring some stuff

--- a/sitio-gimnasio/.env.example
+++ b/sitio-gimnasio/.env.example
@@ -6,3 +6,4 @@ NEXTAUTH_SECRET=LTPv/UAhKU3pxbNPpeoESBX94rQPvIfcI0VdT1TE78g=
 NEXT_PUBLIC_REDIS_HOST=localhost
 NEXT_PUBLIC_REDIS_PORT=6379
 NEXT_PUBLIC_REDIS_PASSWORD=
+REACT_NATIVE_SECRET=
