--- a/sitio-gimnasio/package.json
+++ b/sitio-gimnasio/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
     "react-icons": "^5.1.0",
+    "react-qrcode-reader": "^2.3.13",
     "react-select": "^5.8.0",
     "react-toastify": "^10.0.5",
     "redis": "^4.6.14",
